Fix for bug 138295 (XML Loading on Mac fails on .childNodes of non-root nodes). r=mstoltz, sr=jst.